# Auto-Input

./: AGENTS.md  Cargo.toml  LICENSE  README.md  build.rs  test_format.rs
.github/instructions/: app-ui.instructions.md  input-impl.instructions.md
.github/prompts/: add-input-mode.prompt.md  debug-vmware-input.prompt.md
.github/workflows/: release.yml
docs/: egui-to-iced.md
src/: app.rs  hotkey.rs  input.rs  main.rs
